--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,8 @@
-build:
-  image: python:2.7.11
-  pull: true
-  commands:
-    - pip install -U -r requirements.test.txt
-    - make lint
-    - make test
+pipeline:
+  test:
+    image: python:2.7.11
+    pull: true
+    commands:
+      - pip install -U -r requirements.test.txt
+      - make lint
+      - make test
