Migrate to Python3

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+
 python:
   - "2.7"
 cache: pip
@@ -6,3 +7,50 @@ install:
   - pip install -U -r requirements.test.txt
 script:
   - pytest --cov-report term-missing --cov=silver_braintree tests/
+
+
+pipeline:
+  test:
+    image: python:${PYTHON_VERSION}
+    pull: true
+    group: build
+    environment:
+      - SILVER_DB_ENGINE=django.db.backends.mysql
+      - SILVER_DB_NAME=test_db
+      - SILVER_DB_HOST=mysql
+      - SILVER_DB_USER=silver
+      - SILVER_DB_PASSWORD=silver
+    commands:
+      - make dependencies
+      - pip install -U "Django${DJANGO_VERSION}"
+      - if [ -n "$DJANGO_FILTER_VERSION" ]; then pip install django-filter$DJANGO_FILTER_VERSION; fi
+      - mkdir /var/log/silver
+      - make lint
+      - make test
+
+services:
+  mysql:
+    image: mysql:5.5
+    environment:
+      - MYSQL_DATABASE=test_db
+      - MYSQL_ROOT_PASSWORD=secret
+      - MYSQL_USER=silver
+      - MYSQL_PASSWORD=silver
+
+matrix:
+  include:
+    - PYTHON_VERSION: 2.7
+      DJANGO_VERSION: ">=1.11,<2.0"
+      DJANGO_FILTER_VERSION: "==1.1"
+    - PYTHON_VERSION: 3.5
+      DJANGO_VERSION: ">=2.0,<2.1"
+    - PYTHON_VERSION: 3.5
+      DJANGO_VERSION: ">2.1,<2.2"
+    - PYTHON_VERSION: 3.5
+      DJANGO_VERSION: ">2.2,<2.3"
+    - PYTHON_VERSION: 3.6
+      DJANGO_VERSION: ">=2.0,<2.1"
+    - PYTHON_VERSION: 3.6
+      DJANGO_VERSION: ">2.1,<2.2"
+    - PYTHON_VERSION: 3.6
+      DJANGO_VERSION: ">2.2,<2.3"
