--- a/.drone.yml
+++ b/.drone.yml
@@ -1,8 +1,16 @@
 pipeline:
   test:
-    image: python:2.7.11
+    image: python:${PYTHON_VERSION}
     pull: true
     commands:
       - pip install -U -r requirements.test.txt
+      - pip install -U "Django${DJANGO_VERSION}"
       - make lint
       - make test
+
+matrix:
+  DJANGO_VERSION:
+    - ">=3.1,<3.2"
+    - ">=3.2,<3.3"
+  PYTHON_VERSION:
+    - 3.7
