--- a/requirements.test.txt
+++ b/requirements.test.txt
@@ -1,11 +1,13 @@
-Django>=1.11,<2.0
+Django>=3.1,<3.3
 
 -r requirements.txt
 
-pytest-django==3.5.1
-coverage==4.2
-pytest-cov==2.4.0
-mock==2.0.0
-django-dynamic-fixture==1.9.0
-factory-boy==2.8.1
-pep8==1.7.0
+pytest==6.2.3
+pytest-django==4.2.0
+coverage==5.5
+pytest-cov==2.11.1
+mock==4.0.3
+django-dynamic-fixture==3.1.1
+factory-boy==3.2.0
+Faker==8.1.0
+pep8==1.7.1
